<resources>
    <string name="app_name">FormularioVozOficial</string>


    <string name="hello_world">¿Cual es su Nombre?</string>
    <string name="action_settings">Settings</string>

    <string name="str1">Hablar</string>
    <string name="hello_world1">¿Cual es su Apellido?</string>
    <string name="str2">Hablar</string>
    <string name="hello_world2">¿Cual es su DNI?</string>
    <string name="str3">Hablar</string>

    <string name="hello_world3"> </string>
    <string name="str4">Hablar</string>



</resources>
